# DreamCraft3D

./: .gitignore  clean.sh  preprocess_image.py  process.sh  process_all.sh  pyproject.toml  requirements.txt
configs/: dreamcraft3d-coarse-nerf.yaml  dreamcraft3d-coarse-neus.yaml  dreamcraft3d-geometry.yaml  dreamcraft3d-texture.yaml
threestudio/models/prompt_processors/: deepfloyd_prompt_processor.py
