[tool.poetry]
name = "dreamcraft3d"
version = "0.1.0"
description = ""
authors = ["Xiangyu Wang"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
ninja = "^1.11.1.1"
networkx = ">=3.3,<4.0"
jaxtyping = ">=0.2.28,<0.3.0"
typeguard = "2.13.3"
lightning = "2.0.0"
omegaconf = "2.3.0"
diffusers = "<=0.23.0"
transformers = "^4.41.0"
accelerate = "^0.30.1"
opencv-python = "^4.9.0.80"
tensorboard = "^2.16.2"
matplotlib = "^3.9.0"
imageio = {extras = ["ffmpeg"], version = "^2.34.1"}
libigl = "^2.5.1"
xatlas = "^0.0.9"
trimesh = {extras = ["easy"], version = "^4.4.0"}
pysdf = "^0.1.9"
pymcubes = "^0.1.4"
wandb = "^0.17.0"
gradio = "^4.31.4"
xformers = "^0.0.26.post1"
bitsandbytes = "^0.43.1"
sentencepiece = "^0.2.0"
safetensors = "^0.4.3"
huggingface-hub = "^0.23.0"
einops = "^0.8.0"
kornia = "^0.7.2"
taming-transformers-rom1504 = "^0.0.6"
controlnet-aux = "^0.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
